# multiprocessServer

./: CMakeLists.txt  README.md
client/: client.c
server/: IPC.c  client_pool.c  head.h  server_main.c  util.c
